feat: complete backend core phases 1-8